# nc-aws

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  go.mod  go.sum
cmd/nc-aws/: main.go
docs/engineering-rules/: feature-flags.md
docs/ops/: feature-flags-inventory.md
docs/templates/: feature-flag-template.md
lib/: aws.sh
ui_legacy_tauri/: README.md  package-lock.json  package.json
ui_legacy_tauri/src/: App.css  App.tsx  bridge.ts  index.css  types.ts
ui_legacy_tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui_legacy_tauri/src-tauri/src/: aws.rs  lib.rs
