[package]
name = "app"
version = "0.1.0"
description = "AWS Commander"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
aws-config = "1.8"
aws-sdk-apigatewayv2 = "1.95"
aws-sdk-ec2 = "1.150"
aws-sdk-lambda = "1.115"
aws-sdk-s3 = "1.116"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
thiserror = "2.0"
tokio = { version = "1", features = ["sync"] }
